--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,9 +30,9 @@ spring.shardingsphere.sharding..tables.t_order.actual-data-nodes = ds$->{0..3}.t
 #是否开启SQL显示，默认值: false
 spring.shardingsphere.props.sql.show= true
 
-# mybatsi 配置
+# mybatis 配置
 # 别名
-mybatis.type-aliases-package=com.zou.entity
+mybatis.type-aliases-package=com.lks.demo.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
 # 开启驼峰自动转大写
 mybatis.configuration.mapUnderscoreToCamelCase=true
