--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,12 @@ spring.shardingsphere.datasource.ds1.username=root
 spring.shardingsphere.datasource.ds1.password=123456
 
 #数据源名称，多数据源以逗号分隔
-spring.shardingsphere.datasource.names=ds0,ds1
+spring.shardingsphere.datasource.names=db0,db1
 #未配置分片规则的表将通过默认数据源定位-适用于单库单表，该表无需配置分片规则
-spring.shardingsphere.sharding.default-data-source-name=ds0
+spring.shardingsphere.sharding.default-data-source-name=db0
 
 # 分库 以 user_id 为分片键，因为分四个库，所以取模 4，虚拟表名为 t_order
-spring.shardingsphere.sharding.tables.t_order.database-strategy.inline.algorithm-expression=ds$->{user_id % 2}
+spring.shardingsphere.sharding.tables.t_order.database-strategy.inline.algorithm-expression=db$->{user_id % 2}
 spring.shardingsphere.sharding.tables.t_order.database-strategy.inline.sharding-column=user_id
 
 
@@ -25,7 +25,7 @@ spring.shardingsphere.sharding.tables.t_order.database-strategy.inline.sharding-
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order_000$->{order_id % 2}
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.sharding-column=order_id
 # 这里由于分库分表字段不相同配置，不然会导致使用user_id 查询找不到相应的表，如果我们分库分表都使用 user_id 则不需要这个配置
-spring.shardingsphere.sharding..tables.t_order.actual-data-nodes = ds$->{0..3}.t_order_000$->{0..1}
+spring.shardingsphere.sharding..tables.t_order.actual-data-nodes = db$->{0..3}.t_order_000$->{0..1}
 
 #是否开启SQL显示，默认值: false
 spring.shardingsphere.props.sql.show= true
