--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 # ds1
-spring.shardingsphere.datasource.ds0.type=com.zaxxer.hikari.HikariDataSource
-spring.shardingsphere.datasource.ds0.driver-class-name=com.mysql.jdbc.Driver
-spring.shardingsphere.datasource.ds0.jdbc-url=jdbc:mysql://localhost:3306/db0?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-spring.shardingsphere.datasource.ds0.username=root
-spring.shardingsphere.datasource.ds0.password=123456
-# ds1
-spring.shardingsphere.datasource.ds1.type=com.zaxxer.hikari.HikariDataSource
-spring.shardingsphere.datasource.ds1.driver-class-name=com.mysql.jdbc.Driver
-spring.shardingsphere.datasource.ds1.jdbc-url=jdbc:mysql://localhost:3306/db1?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-spring.shardingsphere.datasource.ds1.username=root
-spring.shardingsphere.datasource.ds1.password=123456
+spring.shardingsphere.datasource.db0.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.db0.driver-class-name=com.mysql.jdbc.Driver
+spring.shardingsphere.datasource.db0.jdbc-url=jdbc:mysql://localhost:3306/db0?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+spring.shardingsphere.datasource.db0.username=root
+spring.shardingsphere.datasource.db0.password=123456
+# db1
+spring.shardingsphere.datasource.db1.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.db1.driver-class-name=com.mysql.jdbc.Driver
+spring.shardingsphere.datasource.db1.jdbc-url=jdbc:mysql://localhost:3306/db1?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+spring.shardingsphere.datasource.db1.username=root
+spring.shardingsphere.datasource.db1.password=123456
 
 #数据源名称，多数据源以逗号分隔
 spring.shardingsphere.datasource.names=db0,db1
@@ -25,7 +25,7 @@ spring.shardingsphere.sharding.tables.t_order.database-strategy.inline.sharding-
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order_000$->{order_id % 2}
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.sharding-column=order_id
 # 这里由于分库分表字段不相同配置，不然会导致使用user_id 查询找不到相应的表，如果我们分库分表都使用 user_id 则不需要这个配置
-spring.shardingsphere.sharding..tables.t_order.actual-data-nodes = db$->{0..3}.t_order_000$->{0..1}
+spring.shardingsphere.sharding..tables.t_order.actual-data-nodes = db$->{0..1}.t_order_000$->{0..1}
 
 #是否开启SQL显示，默认值: false
 spring.shardingsphere.props.sql.show= true
