--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # ds1
 spring.shardingsphere.datasource.db0.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.db0.driver-class-name=com.mysql.jdbc.Driver
-spring.shardingsphere.datasource.db0.jdbc-url=jdbc:mysql://localhost:3306/db0?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+spring.shardingsphere.datasource.db0.jdbc-url=jdbc:mysql://localhost:3306/db0?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.shardingsphere.datasource.db0.username=root
 spring.shardingsphere.datasource.db0.password=123456
 # db1
 spring.shardingsphere.datasource.db1.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.db1.driver-class-name=com.mysql.jdbc.Driver
-spring.shardingsphere.datasource.db1.jdbc-url=jdbc:mysql://localhost:3306/db1?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+spring.shardingsphere.datasource.db1.jdbc-url=jdbc:mysql://localhost:3306/db1?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.shardingsphere.datasource.db1.username=root
 spring.shardingsphere.datasource.db1.password=123456
 
