单库分表和读写分离

--- a/Sub-table-database/src/main/resources/application.properties
+++ b/Sub-table-database/src/main/resources/application.properties
@@ -14,16 +14,20 @@ spring.shardingsphere.datasource.db1.username=root
 spring.shardingsphere.datasource.db1.password=123456
 
 #数据源名称，多数据源以逗号分隔
-spring.shardingsphere.datasource.names=db0
+spring.shardingsphere.datasource.names=db0,db1
 #未配置分片规则的表将通过默认数据源定位-适用于单库单表，该表无需配置分片规则
 spring.shardingsphere.sharding.default-data-source-name=db0
 
 # 分表 分片键位order_id,每个库分为两表，所以取模4，
-# 这里指定master中的数据获取数据，设置到分表数据中，也可以自定义设置分库分表的设置
-spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order_000$->{order_id % 4}
+# 这里指定master中的数据获取数据，设置到分表数据中，也可以自定义设置分库分表的设置，指定分库和分表的字段
 spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.sharding-column=order_id
+spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order_000$->{order_id % 4}
 
-# 读写分离设置
+
+
+# 读写分离设置,可以设置多个从库和主库
+spring.shardingsphere.masterslave.load-balance-algorithm-type=round_robin
+spring.shardingsphere.masterslave.name=dataSource
 spring.shardingsphere.sharding.master-slave-rules.ds0.master-data-source-name=db0
 spring.shardingsphere.sharding.master-slave-rules.ds0.slave-data-source-names=db1
 
